--- a/src/app/business/auth/reset-password/reset-password.component.html
+++ b/src/app/business/auth/reset-password/reset-password.component.html
@@ -27,15 +27,8 @@
                 class="w-full surface-card py-8 px-5 sm:px-8"
                 style="border-radius: 53px"
             >
-                <!-- <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
-                    <span class="text-600 font-medium">Sign in to continue</span>
-                </div> -->
                 <div>
-                    <h4 class="mb-4 text-color">
-                        Sistema de Gestión de Investigación
-                    </h4>
+                    <h4 class="mb-4 text-color">Restaurar contraseña</h4>
                 </div>
 
                 <div>
@@ -46,31 +39,39 @@
                             >Correo</label
                         >
 
-                        <input
-                            id="email1"
-                            type="text"
-                            placeholder="Ingrese su correo"
-                            pInputText
-                            formControlName="email"
-                            class="w-full md:w-30rem mb-5"
-                            style="padding: 1rem"
-                        />
-                        <small
-                            class="pl-2 text-error mb-2"
-                            style="display: grid; margin-top: -20px"
-                            *ngIf="email.dirty && email.errors"
-                            >El correo es requerido.</small
-                        >
-
+                        <div class="my-3">
+                            <b style="font-size: medium;">{{emailUrl}}</b>
+                        </div>
                         <label
                             for="password1"
                             class="block text-900 font-medium text-xl mb-2"
-                            >Password</label
+                            >Nueva contraseña</label
                         >
                         <p-password
                             id="password1"
-                            placeholder="Password"
+                            placeholder="Nueva contraseña"
                             formControlName="password"
+                            [toggleMask]="true"
+                            styleClass="mb-5"
+                            inputStyleClass="w-full p-3 md:w-30rem"
+                            [feedback]="true"
+                        ></p-password>
+                        <small
+                            class="pl-2 text-error mb-2"
+                            style="display: grid; margin-top: -20px"
+                            ng
+                            *ngIf="password.dirty && password.errors"
+                            >Debe ingresar una contraseña.</small
+                        >
+                        <label
+                            for="password1"
+                            class="block text-900 font-medium text-xl mb-2"
+                            >Repita su nueva contraseña</label
+                        >
+                        <p-password
+                            id="password1"
+                            placeholder="Repita su nueva contraseña"
+                            formControlName="secondPassword"
                             [toggleMask]="true"
                             styleClass="mb-5"
                             inputStyleClass="w-full p-3 md:w-30rem"
@@ -78,35 +79,38 @@
                         ></p-password>
                         <small
                             class="pl-2 text-error mb-2"
-                            style="display: grid; margin-top: -20px"ng
-                            *ngIf="password.dirty && password.errors"
+                            style="display: grid; margin-top: -20px"
+                            ng
+                            *ngIf="secondPassword.dirty && secondPassword.errors && stateSecondPassword === ''"
                             >Debe ingresar una contraseña.</small
                         >
-
+                        <small
+                            class="pl-2 text-error mb-2"
+                            style="display: grid; margin-top: -20px"
+                            ng
+                            *ngIf="stateSecondPassword === 'error'"
+                            >El password no coincide.</small
+                        >
                         <div
                             class="flex align-items-center justify-content-between mb-5 gap-5"
                         >
-                            <div class="flex align-items-center">
-                                <p-checkbox
-                                    id="rememberme1"
-                                    [binary]="true"
-                                    styleClass="mr-2"
-                                ></p-checkbox>
-                                <label for="rememberme1">Recordarme</label>
-                            </div>
                             <a
-                                (click)="redirectToForgotPassword()"
+                                (click)="redirectToLogin()"
                                 class="font-medium no-underline ml-2 text-right cursor-pointer"
                                 style="color: var(--primary-color)"
-                                >Olvidaste tu clave?</a
+                                ><i
+                                    class="pi pi-chevron-left"
+                                    style="font-size: 1rem"
+                                ></i>
+                                o inicie sesión aquí</a
                             >
                         </div>
                         <button
                             pButton
                             pRipple
-                            label="Ingresar"
+                            label="Restaurar contraseña"
                             class="w-full p-3 text-xl"
-                            (click)="callToLogin()"
+                            (click)="callToResetPassword()"
                         ></button>
                     </form>
                 </div>
