--- a/src/app/business/pages/events-udi/events-udi.component.html
+++ b/src/app/business/pages/events-udi/events-udi.component.html
@@ -464,7 +464,7 @@
           </div>-->
                 <app-comments
                     class="w-full"
-                    module="reuniones-udi"
+                    [module]="module"
                     [id]="eventSelected.event._def.extendedProps.event_udi.id"
                 ></app-comments>
             </div>
