--- a/src/app/business/pages/hotbed-tracking/hotbed-tracking.component.html
+++ b/src/app/business/pages/hotbed-tracking/hotbed-tracking.component.html
@@ -14,7 +14,6 @@
                             class="mr-2"
                             (click)="goToRegisterHotbed()"
                         ></button>
-                        <button (click)="test()">aaaaaaaa</button>
                     </div>
                 </ng-template>
             </p-toolbar>
@@ -268,7 +267,7 @@
                     <p-button
                         (click)="goToHistory()"
                         label="Ver línea de trabajo"
-                        icon="pi pi-clock"
+                        icon="pi pi-history"
                         iconPos="left"
                     />
                 </div>
