--- a/src/app/business/auth/forgot-password/forgot-password.component.html
+++ b/src/app/business/auth/forgot-password/forgot-password.component.html
@@ -27,14 +27,9 @@
                 class="w-full surface-card py-8 px-5 sm:px-8"
                 style="border-radius: 53px"
             >
-                <!-- <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
-                    <span class="text-600 font-medium">Sign in to continue</span>
-                </div> -->
                 <div>
                     <h4 class="mb-4 text-color">
-                        Sistema de Gestión de Investigación
+                        Recuera tu cuenta
                     </h4>
                 </div>
 
@@ -61,52 +56,23 @@
                             *ngIf="email.dirty && email.errors"
                             >El correo es requerido.</small
                         >
-
-                        <label
-                            for="password1"
-                            class="block text-900 font-medium text-xl mb-2"
-                            >Password</label
-                        >
-                        <p-password
-                            id="password1"
-                            placeholder="Password"
-                            formControlName="password"
-                            [toggleMask]="true"
-                            styleClass="mb-5"
-                            inputStyleClass="w-full p-3 md:w-30rem"
-                            [feedback]="false"
-                        ></p-password>
-                        <small
-                            class="pl-2 text-error mb-2"
-                            style="display: grid; margin-top: -20px"ng
-                            *ngIf="password.dirty && password.errors"
-                            >Debe ingresar una contraseña.</small
-                        >
-
                         <div
                             class="flex align-items-center justify-content-between mb-5 gap-5"
                         >
-                            <div class="flex align-items-center">
-                                <p-checkbox
-                                    id="rememberme1"
-                                    [binary]="true"
-                                    styleClass="mr-2"
-                                ></p-checkbox>
-                                <label for="rememberme1">Recordarme</label>
-                            </div>
                             <a
-                                (click)="redirectToForgotPassword()"
+                                (click)="redirectToLogin()"
                                 class="font-medium no-underline ml-2 text-right cursor-pointer"
                                 style="color: var(--primary-color)"
-                                >Olvidaste tu clave?</a
+                                ><i class="pi pi-chevron-left" style="font-size: 1rem"></i>
+                                o inicie sesión aquí</a
                             >
                         </div>
                         <button
                             pButton
                             pRipple
-                            label="Ingresar"
+                            label="Recuperar"
                             class="w-full p-3 text-xl"
-                            (click)="callToLogin()"
+                            (click)="callToForgotPassword()"
                         ></button>
                     </form>
                 </div>
