--- a/src/app/business/pages/hotbed-register/hotbed-register.component.scss
+++ b/src/app/business/pages/hotbed-register/hotbed-register.component.scss
@@ -16,7 +16,7 @@ input[type=file] {
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
-  background-color: #fff;
+  background-color: transparent;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
@@ -40,5 +40,5 @@ input[type=file] {
 .custom-file-input::before {
   content: "Seleccionar el artículo de investigación";
   display: block;
-  color: #333;  
+  color: var(--text-color);  
 }
