--- a/src/app/business/pages/inscription/step4-component.html
+++ b/src/app/business/pages/inscription/step4-component.html
@@ -1,3 +1,8 @@
+<style>
+    ::ng-deep .p-tag-value {
+        font-size: 1rem;
+    }
+</style>
 <div class="card">
     <p>
         Complete todos los campos para continuar.
@@ -17,6 +22,32 @@
                 </span>
             </div>
         </div>
+        <div *ngIf="results.length > 0 || presenter.title.value" class="grid p-fluid mb-2">
+            <div class="col-12">
+                <div class="grid d-flex mx-2">
+                    <b class="mr-auto">Se encontraron {{results.length}} tesis con un porcentaje de similitud del {{minimumPercentage}}% o más con respecto al título proporcionado.</b>
+                    <i class="pi pi-cog cursor-pointer" style="font-size: 1.3rem" (click)="showConfigCompareTitle()"></i>
+                </div>
+                <p-table *ngIf="results.length > 0" [value]="results" [tableStyle]="{'width': '100%', 'margin-top': '14px'}">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Tesis</th>
+                            <th>Similitud</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-data>
+                        <tr>
+                            <td>{{data.title}}</td>
+                            <!-- <td [style]="data.similarity > '80.00' ? '#ef4444' : ''">{{data.similarity}}%</td> -->
+                            <td><p-tag [value]="data.similarity + '%'" [severity]="getSeverity(data.similarity)" />
+                                </td>
+                        </tr>
+                    </ng-template>
+                    
+                </p-table>
+            </div>
+            
+        </div>
         <div class="grid p-fluid">
             <div class="field col-12 md:col-4">
                 <span class="p-float-label">
@@ -33,6 +64,7 @@
                         formControlName="jobNumber"
                         type="text"
                         id="jobNumber"
+                        pKeyFilter="int"
                         pInputText />
                     <label for="jobNumber">Número de oficio</label>
                 </span>
@@ -43,6 +75,7 @@
                         formControlName="resolutionNumber"
                         type="text"
                         id="resolutionNumber"
+                        pKeyFilter="int"
                         pInputText />
                     <label for="resolutionNumber">Número de resolución</label>
                 </span>
@@ -150,3 +183,15 @@
         </div>
     </form>
 </div>
+
+<p-dialog header="Configuración de similitud de título de tesis" [modal]="true" [(visible)]="configCompareTitle" [style]="{ width: '45rem' }"
+[closeOnEscape]="false" [draggable]="false" [closable]="false">
+    <span class="p-text-secondary block mb-5">Ingrese el porcentaje mínimo en el cual.</span>
+    <div class="flex justify-content-center gap-3 mb-3">
+        <p-knob [(ngModel)]="minimumPercentage" valueTemplate="{value}%" />
+    </div>
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Cancelar" severity="secondary" (onClick)="cancelConfigCompareTitle()" />
+        <p-button label="Guardar" (onClick)="saveConfigCompareTitle()" />
+    </div>
+</p-dialog>
