--- a/src/app/business/pages/users/users.component.html
+++ b/src/app/business/pages/users/users.component.html
@@ -210,6 +210,7 @@
                             id="code"
                             class="w-full"
                             pInputText
+                            pKeyFilter="int"
                             formControlName="code" />
                         <label for="code">Código</label>
                     </span>
@@ -226,6 +227,7 @@
                             id="number"
                             class="w-full"
                             pInputText
+                            pKeyFilter="int"
                             formControlName="number" />
                         <label for="number">Celular</label>
                     </span>
