--- a/src/app/layout/app.menu.component.html
+++ b/src/app/layout/app.menu.component.html
@@ -4,6 +4,9 @@
         bottom: 0;
         text-align: center;
     }
+    ::ng-deep .active-route {
+        background-color: #f9fafb;
+    }
 </style>
 <ul class="layout-menu">
     <ng-container *ngFor="let item of model; let i = index">
